# kanji-colorize

./: .gitignore  README.rst  pavement.py  pyproject.toml
anki/: __init__.py  config.json  kanji_colorizer.py
kanjicolorizer/: colorizer.py
kanjicolorizer/tests/: conftest.py  test_colorizer.py  test_global.py  test_kanjicolorizer.py  test_kanjivg.py
