[tool.poetry]
name = "kanji-colorize"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aqt = "^2.1.52"

[tool.poetry.dev-dependencies]
Paver = "1.2.2"
mock = "1.0.1"
pytest = "^7.1.2"
pylint = "^2.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
